src/main/java/com/cl3t4p/lab_06/parser/ArnoldcParser.java
// Generated from /home/cl3t4p/uni/linguaggi/lab/lab_06/src/main/Arnoldc.g4 by ANTLR 4.13.1
package com.cl3t4p.lab_06.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ArnoldcParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, END_IF=3, WHILE=4, END_WHILE=5, OP_PLUS=6, OP_MINUS=7, OP_MULT=8, 
		OP_DIV=9, OP_MOD=10, OP_EQUALS=11, OP_GRTHAN=12, OP_OR=13, OP_AND=14, 
		BEGIN_MAIN=15, END_MAIN=16, FUN_DECL=17, FUN_NON_VOID=18, FUN_ARG_DEC=19, 
		FUN_RETURN=20, FUN_END=21, PARSE_ERROR=22, FUN_CALL=23, OP_CALL_FUN=24, 
		VAR_INIT=25, VAR_SET_INIT=26, PRINT=27, VAR_SET=28, SETVALUE=29, VAR_ENDSET=30, 
		BOOL=31, NAT=32, STRING=33, ID=34, WS=35;
	public static final int
		RULE_prog = 0, RULE_commands = 1, RULE_cmd = 2, RULE_perse_error_cmd = 3, 
		RULE_call_fun_cmd = 4, RULE_print_cmd = 5, RULE_var_decl_cmd = 6, RULE_if_cmd = 7, 
		RULE_while_cmd = 8, RULE_exp = 9, RULE_var_assign_cmd = 10, RULE_var_assign_fun = 11, 
		RULE_operation = 12, RULE_fun_decl_cmd = 13, RULE_fun_decl_args = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "commands", "cmd", "perse_error_cmd", "call_fun_cmd", "print_cmd", 
			"var_decl_cmd", "if_cmd", "while_cmd", "exp", "var_assign_cmd", "var_assign_fun", 
			"operation", "fun_decl_cmd", "fun_decl_args"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'BECAUSE I'M GOING TO SAY PLEASE'", "'BULLSHIT'", "'YOU HAVE NO RESPECT FOR LOGIC'", 
			"'STICK AROUND'", "'CHILL'", "'GET UP'", "'GET DOWN'", "'YOU'RE FIRED'", 
			"'HE HAD TO SPLIT'", "'I LET HIM GO'", "'YOU ARE NOT YOU YOU ARE ME'", 
			"'LET OFF SOME STEAM BENNET'", "'CONSIDER THAT A DIVORCE'", "'KNOCK KNOCK'", 
			"'IT'S SHOWTIME'", "'YOU HAVE BEEN TERMINATED'", "'LISTEN TO ME VERY CAREFULLY'", 
			"'GIVE THESE PEOPLE AIR'", "'I NEED YOUR CLOTHES YOUR BOOTS AND YOUR MOTORCYCLE'", 
			"'I'LL BE BACK'", "'HASTA LA VISTA, BABY'", "'WHAT THE FUCK DID I DO WRONG'", 
			"'DO IT NOW'", "'GET YOUR ASS TO MARS'", "'HEY CHRISTMAS TREE'", "'YOU SET US UP'", 
			"'TALK TO THE HAND'", "'GET TO THE CHOPPER'", "'HERE IS MY INVITATION'", 
			"'ENOUGH TALK'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "END_IF", "WHILE", "END_WHILE", "OP_PLUS", "OP_MINUS", 
			"OP_MULT", "OP_DIV", "OP_MOD", "OP_EQUALS", "OP_GRTHAN", "OP_OR", "OP_AND", 
			"BEGIN_MAIN", "END_MAIN", "FUN_DECL", "FUN_NON_VOID", "FUN_ARG_DEC", 
			"FUN_RETURN", "FUN_END", "PARSE_ERROR", "FUN_CALL", "OP_CALL_FUN", "VAR_INIT", 
			"VAR_SET_INIT", "PRINT", "VAR_SET", "SETVALUE", "VAR_ENDSET", "BOOL", 
			"NAT", "STRING", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Arnoldc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ArnoldcParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode BEGIN_MAIN() { return getToken(ArnoldcParser.BEGIN_MAIN, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode END_MAIN() { return getToken(ArnoldcParser.END_MAIN, 0); }
		public List<Fun_decl_cmdContext> fun_decl_cmd() {
			return getRuleContexts(Fun_decl_cmdContext.class);
		}
		public Fun_decl_cmdContext fun_decl_cmd(int i) {
			return getRuleContext(Fun_decl_cmdContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldcVisitor ) return ((ArnoldcVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUN_DECL) {
				{
				{
				setState(30);
				fun_decl_cmd();
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(BEGIN_MAIN);
			setState(37);
			commands();
			setState(38);
			match(END_MAIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandsContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public CommandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commands; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).enterCommands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).exitCommands(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldcVisitor ) return ((ArnoldcVisitor<? extends T>)visitor).visitCommands(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandsContext commands() throws RecognitionException {
		CommandsContext _localctx = new CommandsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_commands);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 465698834L) != 0)) {
				{
				{
				setState(40);
				cmd();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdContext extends ParserRuleContext {
		public Var_decl_cmdContext var_decl_cmd() {
			return getRuleContext(Var_decl_cmdContext.class,0);
		}
		public Var_assign_funContext var_assign_fun() {
			return getRuleContext(Var_assign_funContext.class,0);
		}
		public Var_assign_cmdContext var_assign_cmd() {
			return getRuleContext(Var_assign_cmdContext.class,0);
		}
		public Print_cmdContext print_cmd() {
			return getRuleContext(Print_cmdContext.class,0);
		}
		public If_cmdContext if_cmd() {
			return getRuleContext(If_cmdContext.class,0);
		}
		public While_cmdContext while_cmd() {
			return getRuleContext(While_cmdContext.class,0);
		}
		public Fun_decl_cmdContext fun_decl_cmd() {
			return getRuleContext(Fun_decl_cmdContext.class,0);
		}
		public Call_fun_cmdContext call_fun_cmd() {
			return getRuleContext(Call_fun_cmdContext.class,0);
		}
		public Perse_error_cmdContext perse_error_cmd() {
			return getRuleContext(Perse_error_cmdContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).exitCmd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldcVisitor ) return ((ArnoldcVisitor<? extends T>)visitor).visitCmd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cmd);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR_INIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				var_decl_cmd();
				}
				break;
			case OP_CALL_FUN:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				var_assign_fun();
				}
				break;
			case VAR_SET:
				enterOuterAlt(_localctx, 3);
				{
				setState(48);
				var_assign_cmd();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 4);
				{
				setState(49);
				print_cmd();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 5);
				{
				setState(50);
				if_cmd();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 6);
				{
				setState(51);
				while_cmd();
				}
				break;
			case FUN_DECL:
				enterOuterAlt(_localctx, 7);
				{
				setState(52);
				fun_decl_cmd();
				}
				break;
			case FUN_CALL:
				enterOuterAlt(_localctx, 8);
				{
				setState(53);
				call_fun_cmd();
				}
				break;
			case PARSE_ERROR:
				enterOuterAlt(_localctx, 9);
				{
				setState(54);
				perse_error_cmd();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Perse_error_cmdContext extends ParserRuleContext {
		public Perse_error_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_perse_error_cmd; }
	 
		public Perse_error_cmdContext() { }
		public void copyFrom(Perse_error_cmdContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParseErrorContext extends Perse_error_cmdContext {
		public TerminalNode PARSE_ERROR() { return getToken(ArnoldcParser.PARSE_ERROR, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ParseErrorContext(Perse_error_cmdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).enterParseError(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).exitParseError(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldcVisitor ) return ((ArnoldcVisitor<? extends T>)visitor).visitParseError(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Perse_error_cmdContext perse_error_cmd() throws RecognitionException {
		Perse_error_cmdContext _localctx = new Perse_error_cmdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_perse_error_cmd);
		int _la;
		try {
			_localctx = new ParseErrorContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(PARSE_ERROR);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32212254720L) != 0)) {
				{
				setState(58);
				exp();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Call_fun_cmdContext extends ParserRuleContext {
		public Call_fun_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call_fun_cmd; }
	 
		public Call_fun_cmdContext() { }
		public void copyFrom(Call_fun_cmdContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunCallContext extends Call_fun_cmdContext {
		public TerminalNode FUN_CALL() { return getToken(ArnoldcParser.FUN_CALL, 0); }
		public TerminalNode ID() { return getToken(ArnoldcParser.ID, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public FunCallContext(Call_fun_cmdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).enterFunCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).exitFunCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldcVisitor ) return ((ArnoldcVisitor<? extends T>)visitor).visitFunCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Call_fun_cmdContext call_fun_cmd() throws RecognitionException {
		Call_fun_cmdContext _localctx = new Call_fun_cmdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_call_fun_cmd);
		int _la;
		try {
			_localctx = new FunCallContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(FUN_CALL);
			setState(62);
			match(ID);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32212254720L) != 0)) {
				{
				{
				setState(63);
				exp();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print_cmdContext extends ParserRuleContext {
		public Print_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_cmd; }
	 
		public Print_cmdContext() { }
		public void copyFrom(Print_cmdContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintContext extends Print_cmdContext {
		public TerminalNode PRINT() { return getToken(ArnoldcParser.PRINT, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public PrintContext(Print_cmdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldcVisitor ) return ((ArnoldcVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Print_cmdContext print_cmd() throws RecognitionException {
		Print_cmdContext _localctx = new Print_cmdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_print_cmd);
		try {
			_localctx = new PrintContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(PRINT);
			setState(70);
			exp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_decl_cmdContext extends ParserRuleContext {
		public Var_decl_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl_cmd; }
	 
		public Var_decl_cmdContext() { }
		public void copyFrom(Var_decl_cmdContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclContext extends Var_decl_cmdContext {
		public TerminalNode VAR_INIT() { return getToken(ArnoldcParser.VAR_INIT, 0); }
		public TerminalNode ID() { return getToken(ArnoldcParser.ID, 0); }
		public TerminalNode VAR_SET_INIT() { return getToken(ArnoldcParser.VAR_SET_INIT, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public VarDeclContext(Var_decl_cmdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldcVisitor ) return ((ArnoldcVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_decl_cmdContext var_decl_cmd() throws RecognitionException {
		Var_decl_cmdContext _localctx = new Var_decl_cmdContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_var_decl_cmd);
		int _la;
		try {
			_localctx = new VarDeclContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(VAR_INIT);
			setState(73);
			match(ID);
			setState(74);
			match(VAR_SET_INIT);
			setState(75);
			exp();
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32704L) != 0)) {
				{
				{
				setState(76);
				operation();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_cmdContext extends ParserRuleContext {
		public If_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_cmd; }
	 
		public If_cmdContext() { }
		public void copyFrom(If_cmdContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfEndContext extends If_cmdContext {
		public TerminalNode IF() { return getToken(ArnoldcParser.IF, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(ArnoldcParser.ELSE, 0); }
		public TerminalNode END_IF() { return getToken(ArnoldcParser.END_IF, 0); }
		public IfEndContext(If_cmdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).enterIfEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).exitIfEnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldcVisitor ) return ((ArnoldcVisitor<? extends T>)visitor).visitIfEnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_cmdContext if_cmd() throws RecognitionException {
		If_cmdContext _localctx = new If_cmdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_if_cmd);
		try {
			_localctx = new IfEndContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(IF);
			setState(83);
			exp();
			setState(84);
			commands();
			setState(85);
			match(ELSE);
			setState(86);
			commands();
			setState(87);
			match(END_IF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class While_cmdContext extends ParserRuleContext {
		public While_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_cmd; }
	 
		public While_cmdContext() { }
		public void copyFrom(While_cmdContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhileContext extends While_cmdContext {
		public TerminalNode WHILE() { return getToken(ArnoldcParser.WHILE, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode END_WHILE() { return getToken(ArnoldcParser.END_WHILE, 0); }
		public WhileContext(While_cmdContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArnoldcListener ) ((ArnoldcListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ArnoldcVisitor ) return ((ArnoldcVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final While_cmdContext while_cmd() throws RecognitionException {
		While_cmdContext _localctx = new While_cmdContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_while_cmd);
		try {
			_localctx = new WhileContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(WHILE);
			setState(90);
			exp();
			setState(91);
			commands();
			setState(92);
			match(END_WHILE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
